Fix grid spacing

--- a/src/layout/Contact/Contact.module.css
+++ b/src/layout/Contact/Contact.module.css
@@ -2,22 +2,23 @@
   position: relative;
   min-height: calc(100vh - 5rem);
   display: grid;
-  grid-template-rows: 1fr auto 1fr;
+  grid-template-rows: auto 1fr;
   justify-items: center;
   align-content: end;
   background-color: #f6f5f9;
   color: #100e19;
-  scroll-margin-top: -5rem;
+  scroll-margin-top: 5rem;
 }
 
 @media (max-width: 480px) {
   .section {
     min-height: calc(100vh - 4rem);
+    scroll-margin-top: 4rem;
   }
 }
 
 .content {
-  grid-row-start: 2;
+  grid-row-start: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,7 +32,6 @@
   .content {
     gap: 2rem;
     margin-bottom: 4rem;
-    scroll-margin-top: 4rem;
   }
 }
 
@@ -109,7 +109,7 @@
   background-position: center;
   background-size: cover;
   background-image: url('/public/svg/bottom-wave.svg');
-  grid-row-start: 3;
+  grid-row-start: 2;
   align-self: end;
   margin-bottom: -1px;
 }
